--- a/Portfolio/portfoliob.html
+++ b/Portfolio/portfoliob.html
@@ -114,7 +114,7 @@
                                     </li>
                                     <li><i class="fas fa-angle-right"></i><strong> Percentage Secured:</strong> 91</li>
                                     <li><i class="fas fa-angle-right"></i><strong> City:</strong>Chennai</li>
-                                    <li><i class="fas fa-angle-right"></i><strong> DOB:</strong>31 March 2005</li>
+                                    <li><i class="fas fa-angle-right"></i><strong> DOB:</strong>xxxxxxxxxxx</li>
 
                                 </ul>
                             </div>
@@ -188,7 +188,7 @@
         <section id="resume">
             <div class="container">
                 <h2>Resume</h2>
-                <a href="./Resume YASHASWINI.pdf" download class="btn">View my resume</a>
+                <a href="./Resue YASHASWINI.pdf" download class="btn">View my resume</a>
             </div>
         </section>
 
@@ -253,18 +253,18 @@
                             <div class="email">
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
                                 <h4>Email:</h4>
-                                <p>lalithajuliet005@gmail.com</p>
+                                <p>lalithajuliet00s@gmail.com</p>
                             </div>
 
                             <div class="phone">
                                 <i class="fa fa-mobile" aria-hidden="true"></i>
                                 <h4>Call:</h4>
-                                <p>+91 9962204437</p>
+                                <p>xxxxxxxxxxxx</p>
                             </div>
 
                             <!-- google map -->
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15547.87808726614!2d80.15462815000001!3d13.037612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52611b90488f51%3A0x9665a1353b333074!2sPorur%2C%20Chennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1753012842336!5m2!1sen!2sin"
+                                src="https://www.goole.com/maps/embed?pb=!1m18!1m12!1m3!1d15547.87808726614!2d80.15462815000001!3d13.037612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52611b90488f51%3A0x9665a1353b333074!2sPorur%2C%20Chennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1753012842336!5m2!1sen!2sin"
                                 width="100%" height="290px" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
 
@@ -354,5 +354,6 @@
         });
     </script> -->
 </body>
+
 
 </html>
